<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kangaroo_x2_driver</name>
  <version>0.0.0</version>
  <description>Kangaroox2 driver.</description>

  <maintainer email="lyk2@np.edu.sg">Lim Yew Kin</maintainer>
  
  <author email="lyk2@np.edu.sg">Lim Yew Kin</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>serial</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
